--- a/.github/workflows/publish-slides.yaml
+++ b/.github/workflows/publish-slides.yaml
@@ -17,6 +17,7 @@ jobs:
           chmod a+x markdeck
           ./markdeck once
           cp -R assets deck/assets
+          cp -R themes deck/themes
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
